--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -1,12 +1,36 @@
 .navbar {
-    height: 56px;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: #303236;
+    height: 70px;
+    background-color: #0d9736;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 20px;
     box-sizing: border-box;
+    border-radius: 12px;
+    border-color:rgb(196, 147, 88);
+    border-style: solid;
+}
+
+
+.list-item {
+    margin: 50px 20px ;
+    display: flex;
+    height: 100%;
+    width: auto;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.list-item a {
+    color: white;
+    font-size: 1.2em;
+    height: 100%;
+    padding: 16px 10px;
+    border-bottom: 4px solid transparent;
+}
+
+.list-item a:hover,
+.list-item a.active {
+    background-color: #808080;
+    color: white;
 }
